# cn_overlay

./: .gitignore  README.md  overlay.html  package-lock.json  package.json  start.bat
server/: requirements.in  requirements.txt  server.py  start_server.bat
src/: App.svelte  styles.css
src-overlay/: Overlay.svelte  main.ts  styles.css
src-overlay/lib/: Character.svelte  DictCard.svelte  Greet.svelte  Text.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dictionary.rs  main.rs
src/dev/convert_dict/: Cargo.toml  README.md
src/dev/convert_dict/src/: main.rs
src/lib/: Greet.svelte  Overlay.svelte  SelectOverlay.svelte  Text.svelte
