[package]
name = "cn_overlay"
version = "0.0.1"
description = "Chinese Overlay"
authors = ["cospirho"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = "0.51.1"
win-screenshot = "4.0.5"
reqwest = {version = "0.11.20", features = ["blocking"] }
image = "0.24.7"
regex = "1.10.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
